--- a/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
@@ -74,7 +74,7 @@
 					<option value="all">全部</option>
 					<option value="ing">进行中</option>
 					<option value="success">成功</option>
-					<option value="fail">退款中</option>
+					<option value="fail">退款</option>
 				</select>
 			</div>
 		</div>
@@ -203,7 +203,7 @@
 					{{/if}}
 					{{if (item.status === '团购失败')}}
 						<div class="xui-i-status xui-i-gbtn_warnning" style="color:#D00405;">
-						退款中
+						退款
 						</div>
 					{{/if}}
 					{{if (item.status === '未知')}}
