--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
@@ -557,9 +557,11 @@
 		});
 		$(".xa-exchanged").click(function(){
 			$('.xa-alert-exchange').addClass('hidden');
+			window.location.reload()
 		});
 		$(".xa-alert-close").click(function(){
 			$('.xa-alert-exchange').addClass('hidden');
+			window.location.reload()
 		});
 	});
 </script>
