--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -58,8 +58,8 @@
                                     <div style="padding: 3px 0;">
                                         <span name="radio" data-type="radio" span-type="selection" class="selection-radio" data-input-product_id="{{component.model.product.productId}}" data-input-group_type="{{component.components.0.model.group_type}}" data-input-group_days="{{ component.components.0.model.group_days }}" data-input-group_price="{{ component.components.0.model.group_price }}">
                                         </span>
-                                        <span class="ml5 xa-itemTitle group_type" style="margin-left: 30px!important;line-height: 22px;">{% if component.components.0.model.group_type %}{{component.components.0.model.group_type}}{% else %}5{% endif %}人团</span>
-                                        <span class="ml5 xa-itemTitle group_days" style="margin-left: 8% !important;line-height: 22px;">拼团时间:{{component.components.0.model.group_days}}天</span>
+                                        <span class="ml5 xa-itemTitle group_type" style="margin-left: 10% !important;line-height: 22px;">{% if component.components.0.model.group_type %}{{component.components.0.model.group_type}}{% else %}5{% endif %}人团</span>
+                                        <span class="ml5 xa-itemTitle group_days" style="margin-left: 5% !important;line-height: 22px;">拼团时间:{{component.components.0.model.group_days}}天</span>
                                         <span class="ml5 xa-itemTitle group_price" style="line-height: 22px;float: right;">团购价:{{component.components.0.model.group_price}}元</span>
                                     </div>
                                 </li>
@@ -68,8 +68,8 @@
                                     <div style="padding: 3px 0;">
                                         <span name="radio" data-type="radio" span-type="selection" class="selection-radio" data-input-product_id="{{component.model.product.productId}}" data-input-group_type="{{component.components.1.model.group_type}}" data-input-group_days="{{ component.components.1.model.group_days }}" data-input-group_price="{{ component.components.1.model.group_price }}">
                                         </span>
-                                        <span class="ml5 xa-itemTitle group_type" style="margin-left: 30px!important;line-height: 22px;">{% if component.components.1.model.group_type %}{{component.components.1.model.group_type}}{% else %}5{% endif %}人团</span>
-                                        <span class="ml5 xa-itemTitle group_days" style="margin-left: 8% !important;line-height: 22px;">拼团时间:{{component.components.1.model.group_days}}天</span>
+                                        <span class="ml5 xa-itemTitle group_type" style="margin-left: 10% !important;line-height: 22px;">{% if component.components.1.model.group_type %}{{component.components.1.model.group_type}}{% else %}5{% endif %}人团</span>
+                                        <span class="ml5 xa-itemTitle group_days" style="margin-left: 5% !important;line-height: 22px;">拼团时间:{{component.components.1.model.group_days}}天</span>
                                         <span class="ml5 xa-itemTitle group_price" style="line-height: 22px;float: right;">团购价:{{component.components.1.model.group_price}}元</span>
                                     </div>
                                 </li>
