--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -92,9 +92,6 @@
         color: #ff2742;
         display: inline-block;
     }
-    .xui-groupMsg-payHint .xa-i-msg-title {
-        color: #ff2742!important;
-    }
     button.wui-i-btn-groupMsg-yes,button.wui-i-btn-groupMsg-no{
         width: 40%;
         text-align: center;
@@ -156,6 +153,7 @@
     <div class="xui-groupMsg-payHint xa-groupMsg-payHint none">
         <div class="f15 xui-successHint">
             <p class="xui-i-msg-title xa-i-msg-title"></p>
+            <p class="xui-i-msg-title-status xa-i-msg-title-status"></p>
             <p class="xui-i-msg xa-i-msg"></p>
             <p class="xui-i-msg xa-i-msg-not-meber"></p>
         </div>
@@ -652,10 +650,12 @@
         mask('show');
         $('.xui-groupMsg-payHint').removeClass('none');
         if(is_group_leader){
-            $('.xa-groupMsg-payHint').find('.xa-i-msg-title').html('恭喜您 开团成功');
+            $('.xa-groupMsg-payHint').find('.xa-i-msg-title').html('恭喜您 ');
+            $('.xa-groupMsg-payHint').find('.xa-i-msg-title-status').html('开团成功');
             $('.xa-groupMsg-payHint').find('.xa-i-msg').html('赶紧邀请好友参团吧!');
         }else{
-            $('.xa-groupMsg-payHint').find('.xa-i-msg-title').html('恭喜您参团成功');
+            $('.xa-groupMsg-payHint').find('.xa-i-msg-title').html('恭喜您 ');
+            $('.xa-groupMsg-payHint').find('.xa-i-msg-title-status').html('参团成功');
             if(W.isMember){
                 $('.xa-groupMsg-payHint').find('.xa-i-msg').html('赶快去邀请好友吧!');
             }else{
