--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -270,6 +270,7 @@
             var product_name = product_dict.productName;
             var product_price = product_dict.productPrice;
             var product_socks = product_dict.productSocks;
+            var product_sales = product_dict.productSales;
             var product_barcode = product_dict.productBarcode;
             var product_create_at = product_dict.productCreate_at;
 
@@ -298,6 +299,7 @@
             'product_name':product_name,
             'product_price':product_price,
             'product_socks':product_socks,
+            'product_sales':product_sales,
             'product_barcode':product_barcode,
             'product_create_at':product_create_at,
             'rules':rules,
