--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -654,8 +654,7 @@
             $('.xa-groupMsg-payHint').find('.xa-i-msg-title-status').html('开团成功');
             $('.xa-groupMsg-payHint').find('.xa-i-msg').html('赶紧邀请好友参团吧!');
         }else{
-            $('.xa-groupMsg-payHint').find('.xa-i-msg-title').html('恭喜您 ');
-            $('.xa-groupMsg-payHint').find('.xa-i-msg-title-status').html('参团成功');
+            $('.xa-groupMsg-payHint').find('.xa-i-msg-title-status').html('恭喜您 参团成功');
             if(W.isMember){
                 $('.xa-groupMsg-payHint').find('.xa-i-msg').html('赶快去邀请好友吧!');
             }else{
