--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -397,10 +397,13 @@
           }));
     });
     function initValidateDict(WprojectId){
+      var pId = WprojectId.split('new_app:group:')[1];
       var validate_group_flag = true;
       var validate_group_type = undefined;
       var product = $('#propertyEditor').find('input[data-field="product"]').val();
       var material_image = $('#propertyEditor').find('input[data-field="material_image"]').val();
+      var rules = $('#propertyEditor').find('textarea[data-field="rules"]').val().replace(/\n/g,'').replace(/(^\s+)|(\s+$)/g,"");
+      var rules_sample = "1.开团和拼团的顾客需要先已团购价支付商品2.到达团购人数上限或到达团购指定时间后，团购结束。到达团购人数上限 - 团购成功。成功后,在该商品团购结束【20】天内进行发货。在指定时间未到达团购人数上线 - 团购失败。失败后, 【5~7】个工作日完成退款3.本次活动商品数量为【100】份，售完活动结束。开团截止日期【201x-0x-xx】4.已关注的用户可在 个人中心 - 全部订单 中找到支付的团购订单和进入团购活动的入口。";
 
       var GroupArray = $('#propertyEditor').find('.propertyGroup_property_dynamicControlField_control');
 
@@ -424,6 +427,11 @@
       }
       if(!material_image){
         validate_group_type='img';
+      }
+      if(pId=="0"){
+        if(rules==rules_sample){
+          validate_group_type = 'rules';
+        }
       }
 
 
@@ -479,6 +487,8 @@
             W.showHint('error', '团购价格应为两位小数或整数！');
         }else if(validate_group_type=='img'){
             W.showHint('error', '请选择团购分享图片！');
+        }else if(validate_group_type=='rules'){
+            W.showHint('error', '请按模板编辑团购规则！');
         }else{
           return true;
         }
