--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_info_normal.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_info_normal.html
@@ -44,18 +44,20 @@
 		<a class="xui-wcInfoOther" id="shop_list">
 			<span>专属商家</span>
 			{% if weizoom_card.shop_list %}
-				<span class="shop_list_split">{{ weizoom_card.shop_list }}</span>
 				<img src="/static_v2/img/webapp/mall/right_arrow.png">
+				<span class="shop_list_split">{{ weizoom_card.shop_list }}&nbsp;</span>
 			{% else %}
 				<div class="xui-shop-normal">通用</div>
 			{% endif %}
 		</a>
-		<div class="shop_list_name">
-			{% for shop_name  in weizoom_card.shop_list_name %}
-				<div style="float: left">{{ shop_name }}{% if forloop.revcounter != 1 %}、{% endif %}</div>
-			{% endfor %}
-			<div style="clear: both"></div>
-		</div>
+		{% if weizoom_card.shop_list %}
+			<div class="shop_list_name">
+				{% for shop_name  in weizoom_card.shop_list_name %}
+					<div style="float: left">{{ shop_name }}{% if forloop.revcounter != 1 %}、{% endif %}</div>
+				{% endfor %}
+				<div style="clear: both"></div>
+			</div>
+		{% endif %}
 		<a class="xui-searchOther" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{ request.webapp_owner_id }}&project_id=0">
 			<span>查询另一张微众卡余额</span>
 			<img alt="" src="/static_v2/img/webapp/mall/right_arrow.png">
@@ -65,33 +67,38 @@
 			<img alt="" src="/static_v2/img/webapp/mall/right_arrow.png">
 		</a>
 		<div class="detail_list">
-			<table border="0" cellspacing="0">
-				<thead>
-					<tr>
-						<td width="25%">时间</td>
-						<td width="25%">明细</td>
-						<td>去处/来源</td>
-					</tr>
-				</thead>
-				<tbody>
-					{% for order in card_orders %}
-					<tr>
-						<td class="xui-order-info-time">
-							{{order.created_at | date:"Y/m/d"}}<br/>
-							{{order.created_at | date:"H:i:s"}}
-						</td>
-						<td class="xui-order-info-money">
-							<span style="color: #cf0404">
-							-{{order.money}}
-							</span>
-						</td>
-						<td class="xui-order-info-name">
-							{{order.product_name}}
-						</td>
-					</tr>
-					{% endfor%}
-				</tbody>
-			</table>
+			{% if card_orders %}
+				<table border="0" cellspacing="0">
+					<thead>
+						<tr>
+							<td width="25%">时间</td>
+							<td width="25%">明细</td>
+							<td>去处/来源</td>
+						</tr>
+					</thead>
+					<tbody>
+						{% for order in card_orders %}
+						<tr>
+							<td class="xui-order-info-time">
+								{{order.created_at | date:"Y/m/d"}}<br/>
+								{{order.created_at | date:"H:i:s"}}
+							</td>
+							<td class="xui-order-info-money">
+								<span style="color: #cf0404">
+								-{{order.money}}
+								</span>
+							</td>
+							<td class="xui-order-info-name">
+								{{order.product_name}}
+							</td>
+						</tr>
+						{% endfor%}
+						
+					</tbody>
+				</table>
+			{% else %}
+			<div style="text-align: center;">您还没有相关的数据！</div>
+			{% endif%}
 		</div>
 	</div>
 	<div style="height: 45px;"></div>
@@ -105,10 +112,13 @@
 
 {% block js %}
 <script type="text/javascript">
+	var show_shop_list = {% if weizoom_card.shop_list %}true{% else %}false{%endif%}
 	$(document).ready(function() {
 		$('#shop_list').click(function(){
-			$('.shop_list_name').toggle()
-			$(this).find('img').toggleClass('xui-down-arrow')
+			if (show_shop_list){
+				$('.shop_list_name').toggle()
+				$(this).find('img').toggleClass('xui-down-arrow')
+			}
 		});
 		$('#detail_list').click(function(){
 			$('.detail_list').toggle()
