--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -77,7 +77,7 @@
     }
     .wui-swiper-slide .xui-listInner .xui-i-title{
         text-align: left;
-        margin: 5px 10px;
+        margin: 0px 10px;
         padding-bottom: 10px;
     }
 
@@ -99,7 +99,7 @@
         height: 60px;
         border-radius: 4px;
         position: absolute;
-        top: 20px;
+        top: 10px;
         left: 10px;
     }
     .xui-all_groups_can_join-slide .xui-listInner .wui-i-imgBox img,.xui-all_groups_can_join-list .xui-listInner .xui-i-title img{
@@ -119,7 +119,7 @@
     }
     .xui-all_groups_can_join-slide .xui-listInner .wui-i-BtnBox,.xui-all_groups_can_join-list .wui-i-BtnBox{
         position: absolute;
-        top: 25px;
+        top: 10px;
         right: 10px;
         width: 100px;
     }
@@ -144,8 +144,8 @@
     .xui-i-content-remain_hours{
         color: #FF2742;
         position: absolute;
-        top: 28px;
-        right: 125px;
+        top: 10px;
+        right: 118px;
     }
     .xui-i-content-title_box {
         border: 1px solid #CECECE;
@@ -296,6 +296,7 @@ function getDynamicData(recordId){
             for(var i in all_groups_can_join){
                 var p = all_groups_can_join[i];
                 console.log(p);
+                p.group_owner_name = p.group_owner_name.replace(/<[^>]+>/g,"");
                 var s = tpl.render({
                     group_owner_name: p.group_owner_name,
                     group_name: p.group_name,
