--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -2064,7 +2064,7 @@ li.wui-selectBox-display-table {
     color: #ff2742;
     width: 15%;
     float: right;
-    text-align: center;
+    text-align: right;
     line-height: 26px;
     font-weight: bold;
     font-size: 1rem;
