--- a/weapp/market_tools/tools/weizoom_card/css/wzcoin.css
+++ b/weapp/market_tools/tools/weizoom_card/css/wzcoin.css
@@ -303,29 +303,28 @@ html,body{
 .xui-wzResult-page .xui-submitWzOther .xui-order-info-money{
 	font-weight: 500;
 }
+.xui-wzResult-page .xui-go-btn{
+	position: relative;
+	bottom: 5px;
+	text-align: center;
+}
 .xui-wzResult-page .xui-goUserInfo-btn {
     background: #0580CE none repeat scroll 0 0;
     border-radius: 0;
-    bottom: 0;
     color: #fff;
     font-size: 1em;
     height: 45px;
-    left: 3%;
     line-height: 45px;
     position: relative;
     width: 45%;
-    z-index: 12;
 }
 .xui-wzResult-page .xui-goShopping-btn {
     background: #d10000 none repeat scroll 0 0;
     border-radius: 0;
-    bottom: 0;
     color: #fff;
     font-size: 1em;
     height: 45px;
-    left: 3%;
     line-height: 45px;
     position: relative;
     width: 45%;
-    z-index: 12;
 }
