fix & 增加扫码绑定手机会员数

--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -77,6 +77,7 @@
 		<div class=" xa-general">
 			<p>扫码人数：<span class="xui-red">{{channel_qrcode_members_count}}</span></p>
 			<p>下单人数：<span class="xui-red">{{payed_count}}</span></p>
+			<p>绑定手机人数<span class="xui-red">{{bind_phone_members_count}}</span></p>
 			<p>成交金额：<span class="xui-red">￥{{pay_money}}</span></p>
 		</div>
 	</div>
