--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_info_normal.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_info_normal.html
@@ -84,9 +84,15 @@
 								{{order.created_at | date:"H:i:s"}}
 							</td>
 							<td class="xui-order-info-money">
-								<span style="color: #cf0404">
-								-{{order.money}}
-								</span>
+								{% if order.is_product %}
+									<span style="color: #cf0404">
+										-{{order.money}}
+									</span>
+								{% else %}
+									<span style="color: #0fb202">
+										+{{order.money| slice:"1:"}}
+									</span>
+								{% endif %}
 							</td>
 							<td class="xui-order-info-name">
 								{{order.product_name}}
