--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_change_info.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_change_info.html
@@ -165,7 +165,7 @@
 				<div class="xui-fl">
 					<div>微众卡号</div>
 					<div class="xui-numTips xui-cardNum">{{weizoom_card.weizoom_card_id}}</div>	
-					<div>密码:<span class="xui-numTips xui-password xa-password" xui-fontArial>{{weizoom_card.password}}</span>&#91;<a href="javascript:void(0)" class="xui-hidden xa-hidden">隐藏</a>&#93;
+					<div>密码:<span class="xui-numTips xui-password xa-password" xui-fontArial>*******</span>&#91;<a href="javascript:void(0)" class="xui-hidden xa-hidden">查看</a>&#93;
 					</div>
 					<!-- <a href="/workbench/jqm/preview/?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_quit=1" class="xui-exit" >退出登陆</a> -->
 				</div>
