--- a/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
@@ -40,8 +40,12 @@
     table.xui-i-group_members td .xui-memberNameBox{
         width: 140px;
         height: 35px;
-        line-height: 35px;
+        /*line-height: 35px;*/
         color:#2B93DC;
+        margin-top: 5px;
+        word-wrap: break-word;
+        word-break: break-all;
+        white-space: normal;
     }
 
     table.xui-i-group_members td .xui-memberGradeBox{
