按钮心心念，感谢小晶晶

--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -91,7 +91,11 @@
         .xui-dynamicComponentControlImgBox .xui-removeImageButton{
           display: none;
         }
-
+        table .btn-primary.checked {
+            background: #CBCBCB;
+            border: 1px solid #CBCBCB;
+            color: #999999;
+        }
     </style>
 {% endblock %}
 {% block content-panel %}
