--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -82,7 +82,7 @@
 		<div class="xui-general-content xa-general">
 			<div>扫码人数：<span class="xui-red">{{channel_qrcode_members_count}}</span></div>
 			<div>下单人数：<span class="xui-red">{{payed_count}}</span></div>
-			<div>绑定手机人数<span class="xui-red">{{bind_phone_members_count}}</span></div>
+			<div>绑定手机人数：<span class="xui-red">{{bind_phone_members_count}}</span></div>
 			<duv>成交金额：<span class="xui-red">￥{{pay_money}}</span></div>
 		</div>
 	</div>
