微众卡隐藏面值

--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange_list.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange_list.html
@@ -186,7 +186,7 @@
 							<span>
 								<span class="xui-numfont">{{item.time}}</span>
 								<span>{{item.type}}</span>
-								<span class="fr">
+								<span class="fr" style="display: none;">
 									面值: &yen;
 									<span class="xui-numfont">{{item.money}}</span>
 								</span>
@@ -228,7 +228,7 @@
 							<span>
 								<span class="xui-numfont">{{item.time}}</span>
 								<span>兑换平台</span>
-								<span class="fr">
+								<span class="fr" style="display: none;">
 									面值: &yen; 
 									<span class="xui-numfont">{{item.money}}</span>
 								</span>
