--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -145,7 +145,7 @@
 
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
-			<a href="/apps/group/group/" class="btn btn-success fr">
+			<a href="javascript:void(0)" class="btn btn-success fr xa-begin">
 				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建团购
 			</a>
             <button type="button" class="btn btn-success fr mr10 xa-template-setting">配置模板消息</button>
@@ -441,6 +441,30 @@ $(document).ready(function() {
 			}
 		});
 	});
+
+    $('body').delegate('.xa-begin', 'click', function(event) {
+		var $el = $(event.target);
+		W.getApi().call({
+			app: 'apps/group',
+			resource: 'group',
+			method: 'get',
+			success: function(data) {
+                if(data['flag'] == true){
+
+                    window.location="/apps/group/group/"
+                }else{
+                    W.showHint('success', '请先上传微信证书配置！');
+
+                }
+
+
+			},
+			error: function(response) {
+				W.showHint('error', '新建团购失败！');
+			}
+		});
+	});
+
 	$('body').delegate('.xa-close', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
