--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -7,11 +7,9 @@
 		font-family: "华文细黑";
 	}
 	.xui-RecommendedDetailPage .xui-general{
-		height: 56px;
 		border-bottom: 1px solid #ccc;
-		padding-top: 16px;
-		padding-bottom: 16px;
-
+		padding-top: 10px;
+		padding-bottom: 10px;
 	}
 	
 	.xui-RecommendedDetailPage .xui-red{
@@ -74,31 +72,74 @@
     	display: inline-block;
     	width: 48%;
     }
+    .xui-RecommendedDetailPage .xui-time{
+    	border-bottom: 1px solid #CCC;
+    	height: 30px;
+    	line-height: 30px;
+    	padding-left: 28px;
+    	padding-right: 10px;
+    	overflow: hidden;
+    }
+    .xui-RecommendedDetailPage .xui-time .xui-time-wrap{
+    	color: #9e9e9e;
+    	font-size: 13px;
+    	float: right;
+    }
+    .xui-timeChoose{
+    	display: none;
+    }
+    .xui-start-time{
+    	margin: 10px;
+    	padding: 15px 20px;
+    	background: #fff;
+    }
+    .xui-end-time{
+    	margin-bottom: 15px;
+    	padding: 15px 20px;
+    	background: #fff;   
+    }
+    .xui-btn-wrap{
+    	padding: 0 15px;
+    }
 </style>
 {% endblock %}
 {% block content-panel %}
-<div class="xui-RecommendedDetailPage">
+<div class="xui-RecommendedDetailPage xa-RecommendedDetailPage">
+	<div class="xui-time">
+		<span>筛选时间</span>
+		<span class="xui-time-wrap">
+		 	<span>全部</span>
+			<a href="javascript:void(0);" class="xa-choose xui-choose">&gt;</a>
+		</span>
+	</div>
 	<div class="xui-general">
 		<div class="xui-general-content xa-general">
 			<div>扫码人数：<span class="xui-red">{{channel_qrcode_members_count}}</span></div>
 			<div>下单人数：<span class="xui-red">{{payed_count}}</span></div>
 			<div>绑定手机人数：<span class="xui-red">{{bind_phone_members_count}}</span></div>
-			<duv>成交金额：<span class="xui-red">￥{{pay_money}}</span></div>
+			<div>成交金额：<span class="xui-red">￥{{pay_money}}</span></div>
 		</div>
 	</div>
 	<div class="xui-tableview">
 		{% for channel_qrcode_member in channel_qrcode_members %}
-		<div class="xui-tableCell xa-tableCell" style="	float: left;width: 55px;height: 75px;margin-left: 10px;margin-top: 15px;position: relative;">
-			<img class="xui-img" src="{{channel_qrcode_member.member.user_icon}}" style="width:55px;height:55px;border-radius:5px;" />
+		<div class="xui-tableCell xa-tableCell">
+			<img class="xui-img" src="{{channel_qrcode_member.member.user_icon}}"/>
 			<p class="xui-p xui-ellipsis-1">{{channel_qrcode_member.member.username_for_html|safe}}</p>
 			{% if not channel_qrcode_member.member.is_subscribed %}
 			<div class="xui-yellowBar">已跑路</div>
 			{% endif %}
 		</div>
 		{% endfor %}
-		
 	</div>
+</div>
 
+<div class="xui-timeChoose xa-timeChoose">
+	<div class="xui-start-time">开始时间：</div>
+	<div class="xui-end-time">结束时间：</div>
+	<div class="xui-btn-wrap">
+		<a href="javascript:void(0);" class="btn btn-defalut xa-reset">清除时间</a>
+		<a href="javascript:void(0);" class="btn btn-primary xa-submit">确定</a>
+	</div>
 </div>
 
 {% endblock %}
@@ -124,9 +165,16 @@
 				$('.xa-general').css('margin-left',(width-55*6)/7);
 			}
 		}
-		
 
+		$(".xa-choose").click(function(){
+			$(".xa-RecommendedDetailPage").hide();
+			$(".xa-timeChoose").show();
+		})
+
+		$(".xa-submit").click(function(){
+			$(".xa-RecommendedDetailPage").show();
+			$(".xa-timeChoose").hide();
+		})
 	});
-
 </script>
 {% endblock %}
