--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -32,6 +32,11 @@
         <!-- *end_prunt_task* -->
 
         <link type="text/css" rel="stylesheet" href="/webapp_static/backend_{{request.template_name}}/css/{{request.template_name}}.css">
+        <!--日期选择器样式-->
+        <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/normalize3.0.2.min.css">
+        <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/style.css">
+        <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll.css">
+        <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll_date.css">
         {% block css %}{% endblock %}
 
 
@@ -89,6 +94,8 @@
         <script type="text/javascript" src="/termite_static/v3/webapp/webapp.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/preview_imges.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/debug.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/mobile_datetime/mobiscroll.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/mobile_datetime/mobiscroll_date.js"></script>
         <!-- *end_prunt_task* -->
 
 
