--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -134,8 +134,8 @@
 </div>
 
 <div class="xui-timeChoose xa-timeChoose">
-	<div class="xui-start-time">开始时间：</div>
-	<div class="xui-end-time">结束时间：</div>
+	<div class="xui-start-time">开始时间：<input type="text" name="startDate" id="startDate" readonly class="input"/></div>
+	<div class="xui-end-time">结束时间：<input type="text" name="endDate" id="endDate" readonly class="input"/></div>
 	<div class="xui-btn-wrap">
 		<a href="javascript:void(0);" class="btn btn-defalut xa-reset">清除时间</a>
 		<a href="javascript:void(0);" class="btn btn-primary xa-submit">确定</a>
@@ -176,5 +176,28 @@
 			$(".xa-timeChoose").hide();
 		})
 	});
+
+	$(function () {
+		var currYear = (new Date()).getFullYear();	
+		var opt={};
+		opt.date = {preset : 'date'};
+		opt.datetime = {preset : 'datetime'};
+		opt.time = {preset : 'time'};
+		opt.default = {
+			theme: 'android-ics light', //皮肤样式
+			display: 'modal', //显示方式 
+			mode: 'scroller', //日期选择模式
+			dateFormat: 'yyyy-mm-dd',
+			lang: 'zh',
+			showNow: true,
+			nowText: "今天",
+			startYear: currYear - 50, //开始年份
+			endYear: currYear + 10 //结束年份
+		};
+
+		$("#startDate").mobiscroll($.extend(opt['date'], opt['default']));
+		$("#endDate").mobiscroll($.extend(opt['date'], opt['default']));
+
+});
 </script>
 {% endblock %}
