--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -1,6 +1,11 @@
 {% extends "webapp_content_base.html" %}
 {% load common_tag %}
 {% block css%}
+<!--日期选择器样式-->
+<link type="text/css" rel="stylesheet" href="/termite_static/v3/css/normalize3.0.2.min.css">
+<link type="text/css" rel="stylesheet" href="/termite_static/v3/css/style.css">
+<link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll.css">
+<link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll_date.css">
 <style>
 	html,body{
 		background: #ececec;
@@ -145,6 +150,8 @@
 {% endblock %}
 
 {% block js %}
+<script type="text/javascript" src="/termite_static/v3/mobile_datetime/mobiscroll_date.js"></script>
+<script type="text/javascript" src="/termite_static/v3/mobile_datetime/mobiscroll.js"></script>
 <script>
 	$(document).ready(function(){
 		var width=document.body.clientWidth;
@@ -198,6 +205,6 @@
 		$("#startDate").mobiscroll($.extend(opt['date'], opt['default']));
 		$("#endDate").mobiscroll($.extend(opt['date'], opt['default']));
 
-});
+	});
 </script>
 {% endblock %}
