修改没有证书时的跳转url

--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -145,8 +145,7 @@
 
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
-            <a href="/apps/group/group/" class="btn btn-success fr"> <!-- 测试环境 -->
-			<!-- <a href="javascript:void(0)" class="btn btn-success fr xa-begin"> 生产环境-->
+            <a href="javascript:void(0)" class="btn btn-success fr xa-begin">
 				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建团购
 			</a>
             <button type="button" class="btn btn-success fr mr10 xa-template-setting">配置模板消息</button>
