--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -79,22 +79,21 @@
     }
     .xui-RecommendedDetailPage .xui-time{
     	border-bottom: 1px solid #CCC;
-    	height: 30px;
+    	height: 35px;
     	line-height: 30px;
-    	padding-left: 28px;
-    	padding-right: 10px;
+    	padding-right: 30px;
     	overflow: hidden;
     }
     .xui-RecommendedDetailPage .xui-time .xui-time-wrap{
     	color: #9e9e9e;
-    	font-size: 13px;
+    	font-size: 14px;
     	float: right;
     }
     .xui-timeChoose{
     	display: none;
     }
     .xui-start-time{
-    	margin: 10px;
+    	margin: 10px 0;
     	padding: 15px 20px;
     	background: #fff;
     }
@@ -105,15 +104,48 @@
     }
     .xui-btn-wrap{
     	padding: 0 15px;
+    	overflow: hidden;
+    }
+    .xui-btn-wrap a{
+    	display: inline-block;
+    	width: 47%;
+    	text-align:center;
+    	padding: 10px 0;
+    	box-sizing: border-box;
+    }
+    .xui-btn-wrap a.xui-reset{
+    	background: #fff;
+    	text-decoration: none;
+    	color: #000;
+    	border:1px solid #dcdcdc;
+    	float: left;
+    }
+    .xui-btn-wrap a.xui-submit{
+    	background: #0480cf;
+    	text-decoration: none;
+    	color: #000;
+    	border:1px solid #dcdcdc;
+    	color: #fff;
+    	float: right;
+    }
+    .xui-choose{
+    	display: inline-block;
+    	text-decoration: none;
+    	color: #9e9e9e;
+    	font-family: "黑体";
+    	margin-left: 10px;
+    	font-size: 18px;
+    	vertical-align: bottom;
+    	font-weight: 700;
     }
 </style>
 {% endblock %}
 {% block content-panel %}
 <div class="xui-RecommendedDetailPage xa-RecommendedDetailPage">
-	<div class="xui-time">
+	<div class="xui-time xa-time">
 		<span>筛选时间</span>
 		<span class="xui-time-wrap">
-		 	<span>全部</span>
+		 	<span class="xui-time-content">全部</span>
 			<a href="javascript:void(0);" class="xa-choose xui-choose">&gt;</a>
 		</span>
 	</div>
@@ -142,8 +174,8 @@
 	<div class="xui-start-time">开始时间：<input type="text" name="startDate" id="startDate" readonly class="input"/></div>
 	<div class="xui-end-time">结束时间：<input type="text" name="endDate" id="endDate" readonly class="input"/></div>
 	<div class="xui-btn-wrap">
-		<a href="javascript:void(0);" class="btn btn-defalut xa-reset">清除时间</a>
-		<a href="javascript:void(0);" class="btn btn-primary xa-submit">确定</a>
+		<a href="javascript:void(0);" class="xui-reset xa-reset">清除时间</a>
+		<a href="javascript:void(0);" class="xui-submit xa-submit">确定</a>
 	</div>
 </div>
 
