--- a/weapp/mall/templates/mall/editor/pay_interfaces.html
+++ b/weapp/mall/templates/mall/editor/pay_interfaces.html
@@ -10,23 +10,23 @@
 <div class="xui-i-box xui-rightPanelBg xui-tableList-content pt5 pb20">
 {% for pay_interface in pay_interfaces %}
 {% if not pay_interface.type == 3 %}  <!--  PAY_INTERFACE_WEIZOOM_COIN  -->
-<section 
-	class="xui-payInterface ml10 mr10" 
-	style="width:976px;" 
-	data-pay-interface-id="{{pay_interface.id}}" 
-	data-should-create="{% if pay_interface.should_create_related_config %}true{% else %}false{% endif %}" 
-	data-value="{{pay_interface.name}}" 
+<section
+	class="xui-payInterface ml10 mr10"
+	style="width:976px;"
+	data-pay-interface-id="{{pay_interface.id}}"
+	data-should-create="{% if pay_interface.should_create_related_config %}true{% else %}false{% endif %}"
+	data-value="{{pay_interface.name}}"
 	data-is-active="{% if pay_interface.is_active %}true{% else %}false{% endif %}"
 >
 	<h2 id="pay-title" class="xui-i-title xui-headHeight">
             <span class="fb">{{pay_interface.name}}</span>
             {% if pay_interface.is_active %}
-            <div id="pay-status" class="xui-floatBtn fb">(已启用)</div>  
+            <div id="pay-status" class="xui-floatBtn fb">(已启用)</div>
             <div class="btn-group xui-useBtn" style="bottom:1px;" >
               <label class="xa-enable btn btn-success xui-saveBtn active" value='1'><span>停用</span></label>
-            </div> 
+            </div>
             {% else %}
-            <div id="pay-status" class="xui-floatBtn fb">(未启用)</div>  
+            <div id="pay-status" class="xui-floatBtn fb">(未启用)</div>
             <div class="btn-group xui-useBtn" style="bottom:1px;" >
               <label class="xa-enable btn btn-success xui-saveBtn  xui-payStatusOn" value='0'><span>启用</span></label>
             </div>
@@ -34,18 +34,19 @@
     </h2>
 	<div class="xui-i-content">
 		{% if pay_interface.name == "微信支付" %}
-		
+
 		{% if not pay_interface.should_create_related_config %}
 		<div style="line-height:42px;">
 			<span style="padding-top:5px;">当前微信支付配置为：</span>
-			<div class="pl30">
+			<div class="pl30" style="position: relative;">
 				<ul>
 					{% for config in pay_interface.configs %}
 					<li style="line-height:28px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width: 40em;">{{config.name}}: {{config.value}}</li>
-					{% endfor %} 
+					{% endfor %}
 					<li style="line-height:28px;"><a href="/mall2/pay_interface/?id={{pay_interface.id}}">修改</a></li>
 				</ul>
-					
+				<a href="/mall2/weixin_certificate"><button class="btn btn-default" style="position: absolute;right: 20px;bottom: 15px;">录入自动退款证书</button></a>
+
 			</div>
 		</div>
 		{% else %}
@@ -62,7 +63,7 @@
 		{% endif %}
 
 		{% if pay_interface.name == "支付宝" %}
-		
+
 		{% if not pay_interface.should_create_related_config %}
 		<div style="height:220px;padding-top:0px;">
 			<span style="padding-top:5px;">当前支付宝配置为：</span>
@@ -70,7 +71,7 @@
 				<ul>
 					{% for config in pay_interface.configs %}
 					<li style="line-height:28px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width: 40em;">{{config.name}}: {{config.value}}</li>
-					{% endfor %} 
+					{% endfor %}
 					<li style="line-height:28px;"><a href="/mall2/pay_interface/?id={{pay_interface.id}}">修改</a></li>
 				</ul>
 			</div>
