--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -1,9 +1,9 @@
 {% extends "webapp_content_base.html" %}
 {% load common_tag %}
 {% block css%}
-<!--日期选择器样式-->
+<!--日期选择器样式--><!-- 
 <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/normalize3.0.2.min.css">
-<link type="text/css" rel="stylesheet" href="/termite_static/v3/css/style.css">
+<link type="text/css" rel="stylesheet" href="/termite_static/v3/css/style.css"> -->
 <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll.css">
 <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll_date.css">
 <style>
