--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -171,8 +171,8 @@
 </div>
 
 <div class="xui-timeChoose xa-timeChoose">
-	<div class="xui-start-time">开始时间：<input type="text" name="startDate" id="startDate" readonly class="input"/></div>
-	<div class="xui-end-time">结束时间：<input type="text" name="endDate" id="endDate" readonly class="input"/></div>
+	<div class="xui-start-time">开始时间：<input type="text" name="startDate" id="startDate" class="input"/></div>
+	<div class="xui-end-time">结束时间：<input type="text" name="endDate" id="endDate" class="input"/></div>
 	<div class="xui-btn-wrap">
 		<a href="javascript:void(0);" class="xui-reset xa-reset">清除时间</a>
 		<a href="javascript:void(0);" class="xui-submit xa-submit">确定</a>
@@ -217,6 +217,7 @@
 	});
 
 	$(function () {
+		console.log(11111112222222);
 		var currYear = (new Date()).getFullYear();	
 		var opt={};
 		opt.date = {preset : 'date'};
