--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -190,18 +190,21 @@
 		if(width<420)
 		{
 			$('.xa-tableCell').css('margin-left',(width-55*4)/5+'px');
-			$('.xa-general').css('margin-left',(width-55*4)/5)
+			$('.xa-general').css('margin-left',(width-55*4)/5);
+			$('.xa-time').css('padding-left',(width-55*4)/5);
 		}
 		else{
 			if(width<480)
 			{
 				$('.xa-tableCell').css('margin-left',(width-55*5)/6+'px');
 				$('.xa-general').css('margin-left',(width-55*5)/6);
+				$('.xa-time').css('padding-left',(width-55*5)/6);
 			}
 			else
 			{
 				$('.xa-tableCell').css('margin-left',(width-55*6)/7+'px');
 				$('.xa-general').css('margin-left',(width-55*6)/7);
+				$('.xa-time').css('padding-left',(width-55*6)/7);
 			}
 		}
 
