换一张默认头像~

--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -5,7 +5,7 @@
         <div class="wui-i-body">
             <div class="wui-i-help_group">
                 <div class="wui-i-shop_circle">
-                    <img src="/static/img/default_shop_avatar.png">
+                    <img src="/termite_static/img/component/group/defalut_icon.jpg">
                 </div>
                 <div class="wui-i-rules xa-rules">
                     <div class="wui-i-title xa-i-title">
